Update documentation for File.executable{,_real}? to mention Windows issues

Fixes [Bug #15664]